--- a/JogoDaVelha/modelo.html
+++ b/JogoDaVelha/modelo.html
@@ -7,7 +7,7 @@
     <title>Jogo da Velha</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
-<body>
+<body  onload="jogar()">
     <h1>Jogador: <span id="player"></span></h1>
     <main>
         <div><input type="button" value="_" id="box11" class="posicao" onclick="jogar()"><input type="button" value="_" id="box12" class="posicao"onclick="jogar()"><input type="button" value="_" id="box13" class="posicao" onclick="jogar()"></div>
